cleaned package strongbox.test.login.mvc added javadoc

--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -11,5 +11,7 @@ Is jasypt working with Android and is the policy needed?
 
 *javadoc for every file
 
+*in the LoginController the frame is not repainted after setting up a password repaint does not work 
+
 
 
